--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project-icons">
-            <a href="github-project-1-link"><img src="project-1-icon.png" alt="Project 1"></a>
+            <a href="https://github.com/ShireenRuhan/Ensemble_Models.git"><img src="trees.jpg" alt="Project 1"></a>
             <a href="github-project-2-link"><img src="project-2-icon.png" alt="Project 2"></a>
             <a href="github-project-3-link"><img src="project-3-icon.png" alt="Project 3"></a>
         </div>
