--- a/index.html
+++ b/index.html
@@ -21,11 +21,43 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project-icons">
-            <a href="https://github.com/ShireenRuhan/Ensemble_Models.git"><img src="trees.jpg" alt="Project 1"></a>
-            <a href="github-project-2-link"><img src="project-2-icon.png" alt="Project 2"></a>
-            <a href="github-project-3-link"><img src="project-3-icon.png" alt="Project 3"></a>
-        </div>
+    <div class="project-section">
+  <div class="project">
+    <div class="project-description">
+      <h3>Project 1</h3>
+      <p>Description of Project 1</p>
+    </div>
+    <div class="project-icon">
+      <a href="https://github.com/ShireenRuhan/Ensemble_Models.git"">
+        <img src="trees.jpg" alt="Project 1 Icon">
+      </a>
+    </div>
+  </div>
+  <div class="project">
+    <div class="project-description">
+      <h3>Project 2</h3>
+      <p>Description of Project 2</p>
+    </div>
+    <div class="project-icon">
+      <a href="https://github.com/username/project2">
+        <img src="project2-icon.png" alt="Project 2 Icon">
+      </a>
+    </div>
+  </div>
+  <div class="project">
+    <div class="project-description">
+      <h3>Project 3</h3>
+      <p>Description of Project 3</p>
+    </div>
+    <div class="project-icon">
+      <a href="https://github.com/username/project3">
+        <img src="project3-icon.png" alt="Project 3 Icon">
+      </a>
+    </div>
+  </div>
+  <!-- Add more projects here -->
+</div>
+
     </section>
 
     <section id="about">
