--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div class="project-section">
   <div class="project">
     <div class="project-description">
-      <h3>Predicting Passenger Satisfaction: A Comparative Analysis of Ensemble Learning Models</h3>
-      <p>skills:Supervised ML Concepts, Tree-Based Ensemble Models,EDA</p>
+      <h3>Predicting Passenger Satisfaction</h3>
+      <p>A Comparative Analysis of Ensemble Learning Models
+          skills:Supervised ML Concepts, Tree-Based Ensemble Models,EDA</p>
     </div>
     <div class="project-icon">
       <a href="https://github.com/ShireenRuhan/Ensemble_Models.git"">
